# VerticalFarm

./: .gitignore  HA_INTEGRATION_TEST_GUIDE.md  LICENSE  QUICK_START.md  README.md  README_zh.md  TODO.md  backend_main.py  env_observer.py  install_homeassistant_integration.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  start_mqtt_broker.py  test_final_summary.py  test_ha_integration_direct.py  test_integration_logic.py  test_mqtt_connection.py  test_mqtt_data.py  test_routes.py  test_with_fake_data.py
.github/.workflow/: pipline.yaml
.github/workflows/: pipline.yaml
backend/: main.py
control/: light_schedule.py  llm_calls.py  model.py
data/: __init__.py  config.py  tables.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  App.test.jsx  AppRouter.jsx  ImageRequest.js  Request.js  config.json  index.css  theme.js
gateway/: __init__.py  constants.py  msg.py  publisher.py  service.py  subscriber.py  test_ble.py  test_mqtt.py  tests.py
homeassistant_integration/: README.md  __init__.py  config_flow.py  const.py  manifest.json  mqtt_client.py  sensor.py
inference/: DEPLOY.md  README.md
inference/client/: pyproject.toml
inference/client/tests/: test_integration.py
inference/client/vf_client/: __init__.py
inference/client/vf_proxy/: __init__.py  cli.py  runner.py  server.py
inference/server/: Cargo.toml
inference/server/vf-core/: Cargo.toml
inference/server/vf-core/src/: backend.rs  cache.rs  config.rs  error.rs  kv.rs  lib.rs  model_manager.rs  models.rs  protocol.rs  service.rs
inference/server/vf-llama/: Cargo.toml  build.rs  cross.example.toml
inference/server/vf-llama/src/: ffi.rs  lib.rs  runtime.rs  session.rs
inference/server/vf-llama/src/runtime/: imp.rs
inference/server/vf-mock/: Cargo.toml
inference/server/vf-mock/src/: backend.rs  lib.rs
inference/server/vf-server/: Cargo.toml
inference/server/vf-server/src/: frame.rs  main.rs  queue.rs
llm/: README.md  __init__.py  ble_data.csv  client.py  cloud.py  cloud_output.txt  constants.py  demo.py  local.py  ollama.py  p1_output.json  p2_output.json  p3_output.json  parser.py  service.py  tcp_server.py
route/: ai.py  control.py  history.py  others.py  plant.py  utils.py
(+92 files in other folders)
