[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vf-proxy"
version = "0.2.0"
description = "VerticalFarm workflow proxy process (llm/ + vf-server)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vf-proxy = "vf_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vf_proxy*"]

[tool.pytest.ini_options]
pythonpath = [".", "..", "../.."]
